--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/uuid": "^10.0.0",
     "ai": "^4.3.19",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
